<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/reward"
            android:icon="@drawable/bigcup"
            android:title="@string/reward" />
        <item
            android:id="@+id/setting"
            android:icon="@drawable/setting"
            android:title="@string/setting" />
        <item
            android:id="@+id/rate"
            android:icon="@drawable/rate"
            android:title="@string/rate" />
        <item
            android:id="@+id/support"
            android:icon="@drawable/support"
            android:title="@string/support" />

        <item
            android:id="@+id/about"
            android:icon="@drawable/about"
            android:title="@string/about" />
        <item
            android:id="@+id/signOut"
            android:icon="@drawable/logout"
            android:title="@string/signOut" />
    </group>

</menu>
